# corset

./: .gitignore  COPYING.md  ChangeLog.md  Makefile.am  NEWS.md  README.md  TODO.md  acinclude.m4  configure.ac
build-aux/: git-tar-name.txt
doc/: DESIGN-GOALS.md  MODULES.md  VARIABLES.md  corset.conf  corset.json
examples/: GNUmakefile  example-ipset.c  example-nfqueue.c
include/: corcfg.h  corset.h  corset_common.h  corset_compat.h  corset_module.h
lib/libcorcfg/: libcorcfg.h  libcorcfg.sym  memory.c  memory.h  version.c  version.h
lib/libcorset/: conf.c  conf.h  largs.c  largs.h  ldaemon.c  ldaemon.h  ldebug.c  ldebug.h  libcorset.h  libcorset.sym  lmemory.c  lmemory.h  lmodule.c  lmodule.h  version.c  version.h
lib/mod_dummy/: mod_dummy.c  mod_dummy.h
src/client/: cmd-config.c  cmd-config.h  corset.c  corset.h
src/ctl/: corsetctl.c  corsetctl.h
src/daemon/: corsetd.c  corsetd.h
src/examples/: .gitignore  GNUmakefile  example-ipset.c  example-nfqueue.c
src/modinfo/: corset-modinfo.c  corset-modinfo.h
